# gcx-sx

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  ProjectHome.md  README  TODO  aclocal.m4  config.status  configure  configure.in  gcx.glade  run_me_first
data/: apod1b.axy  cygs-aug19.out  impgem.obs  landolt.rcp  uori.rcp
docs/: Makefile  gcx.ltx  makepictures  zp-am-2.gpl  zp-t-2.gpl
docs/html/: footnode.html  images.pl  images.tex  index.html  internals.pl  labels.pl  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
src/: Makefile  Makefile.am  Makefile.in  Makefile~  camera.c  camera.c~  camera.h  camera.h~  cameragui.c  cameragui.c.old  cameragui.h  catalogs.c  catalogs.h  config.h  config.h.in  filegui.c  filegui.h  framelist.c  fwheel.c  fwheel.h  gcx  gcx.c  gcx.h  getline.h  gui.c  gui.h  guide.c  guide.h  guidegui.c  helpmsg.c  imadjust.c  initparams.c  interface.c  interface.h  mbandgui.c  mbandrep.c  misc.c  misc.h  multiband.c  multiband.h  (+30 more)
src/.deps/: callbacks.Po  camera.Po  cameragui.Po  catalogs.Po  filegui.Po  framelist.Po  fwheel.Po  gcx.Po  gui.Po  guide.Po  guidegui.Po  helpmsg.Po  imadjust.Po  initparams.Po  interface.Po  mbandgui.Po  mbandrep.Po  misc.Po  multiband.Po  nutation.Po  obsdata.Po  obslist.Po  params.Po  paramsgui.Po  photometry.Po  plots.Po  recipy.Po  recipygui.Po  reduce.Po  reducegui.Po  report.Po  showimage.Po  sidereal_time.Po  sourcesdraw.Po  staredit.Po  starfile.Po  starlist.Po  support.Po  sxusbcam.Po  tele.Po  (+5 more)
src/ccd/: Makefile  Makefile.am  Makefile.in  aphot.c  badpix.c  ccd.h  ccd_frame.c  edb.c  median.c  recipy.c  sources.c  warp.c  worldpos.c
src/ccd/.deps/: aphot.Po  badpix.Po  ccd_frame.Po  edb.Po  errlog.Po  median.Po  recipy.Po  sources.Po  warp.Po  worldpos.Po
src/gcx-sx/: Makefile  SwapMX25data.c  gcx-sx-port-info-list.c  gcx-sx-port-info-list.h  gcx-sx-port-library.h  gcx-sx-port-log.h  gcx-sx-port-portability.h  gcx-sx-port-result.h  gcx-sx-port.c  gcx-sx-port.h  jpeg_sample.c  libgcx-sx-main.c  libgcx-sx-main.h  libgcx-sx.c  libusb.c
src/gsc/: Makefile  Makefile.am  Makefile.in  embgsc.c  get_head.c
src/gsc/.deps/: decode_c.Po  dispos.Po  dtos.Po  embgsc.Po  find_reg.Po  get_head.Po  prtgsc.Po  to_d.Po
